[gd_scene load_steps=10 format=4 uid="uid://dxswa2tl7uk2a"]

[ext_resource type="Script" uid="uid://djlm6hjsn4qss" path="res://scripts/maps/map.gd" id="1_g4i4y"]
[ext_resource type="Texture2D" uid="uid://cml7qypsgrf45" path="res://assets/maps/minecraft/minecraft.png" id="2_g4i4y"]
[ext_resource type="Texture2D" uid="uid://cpysa680w80kc" path="res://assets/tiles/tiles.png" id="3_4i5mt"]

[sub_resource type="Curve2D" id="Curve2D_g4i4y"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -25, 949, 0, 0, 0, 0, 701, 952, 0, 0, 0, 0, 700, 699, 0, 0, 0, 0, 550, 699, 0, 0, 0, 0, 549, 449, 0, 0, 0, 0, 200, 448, 0, 0, 0, 0, 199, 150, 0, 0, 0, 0, 749, 150)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_om026"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 779, 48, 0, 0, 0, 0, 52, 48, 0, 0, 0, 0, 51, 852, 0, 0, 0, 0, 451, 851, 0, 0, 0, 0, 450, 246)
}
point_count = 5

[sub_resource type="Curve2D" id="Curve2D_4i5mt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 779, 47, 239.58, 66.1467, -239.58, -66.1467, 442, 492, -110.52, 142.987, 110.52, -142.987, 243, 193, 0, 0, 0, 0, 451, 247)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_e187w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -26, 949, 0, 0, 0, 0, 774, 150)
}
point_count = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wijl4"]
texture = ExtResource("3_4i5mt")
texture_region_size = Vector2i(50, 50)
0:0/0 = 0
0:0/0/custom_data_0 = 1
1:0/0 = 0
1:0/0/custom_data_0 = 2
2:0/0 = 0
2:0/0/custom_data_0 = 3

[sub_resource type="TileSet" id="TileSet_e0an3"]
tile_size = Vector2i(50, 50)
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 2
sources/0 = SubResource("TileSetAtlasSource_wijl4")

[node name="Map" type="Control"]
custom_minimum_size = Vector2(750, 1000)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_g4i4y")

[node name="OpponentPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_g4i4y")

[node name="SystemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_om026")

[node name="FlyingSystemPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_4i5mt")

[node name="FlyingOpponentPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_e187w")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(374.445, 500)
scale = Vector2(3.12, 3.12)
texture = ExtResource("2_g4i4y")

[node name="Terrain" type="TileMapLayer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(-25, -25)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAQAAAACAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAgAAAACAAAAAAAAAAkAAAACAAAAAAAAAAoAAAACAAAAAAAAAAsAAAACAAAAAAAAAAwAAAACAAAAAAAAAA0AAAACAAAAAAAAAA4AAAACAAAAAAAAAA8AAAACAAAAAAAAABAAAAACAAAAAAAAABEAAAACAAAAAAAAABIAAAACAAAAAAAAABMAAAABAAAAAAAAABQAAAACAAAAAAABAAAAAAACAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAAABAAAAAAABAAoAAAABAAAAAAABAAsAAAABAAAAAAABAAwAAAABAAAAAAABAA0AAAABAAAAAAABAA4AAAABAAAAAAABAA8AAAABAAAAAAABABAAAAABAAAAAAABABEAAAABAAAAAAABABIAAAAAAAAAAAABABMAAAABAAAAAAABABQAAAACAAAAAAACAAAAAAACAAAAAAACAAEAAAABAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAACAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAAAAAAAAAACABEAAAABAAAAAAACABIAAAAAAAAAAAACABMAAAABAAAAAAACABQAAAACAAAAAAADAAAAAAACAAAAAAADAAEAAAABAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAACAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAADAA0AAAACAAAAAAADAA4AAAACAAAAAAADAA8AAAACAAAAAAADABAAAAAAAAAAAAADABEAAAABAAAAAAADABIAAAAAAAAAAAADABMAAAABAAAAAAADABQAAAACAAAAAAAEAAAAAAACAAAAAAAEAAEAAAABAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAABAAAAAAAEAAQAAAABAAAAAAAEAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAcAAAABAAAAAAAEAAgAAAABAAAAAAAEAAkAAAABAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAACAAAAAAAEAAwAAAACAAAAAAAEAA0AAAACAAAAAAAEAA4AAAACAAAAAAAEAA8AAAACAAAAAAAEABAAAAAAAAAAAAAEABEAAAABAAAAAAAEABIAAAAAAAAAAAAEABMAAAABAAAAAAAEABQAAAACAAAAAAAFAAAAAAACAAAAAAAFAAEAAAABAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAABAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAACAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAABAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAACAAAAAAAFAAwAAAACAAAAAAAFAA0AAAACAAAAAAAFAA4AAAACAAAAAAAFAA8AAAACAAAAAAAFABAAAAAAAAAAAAAFABEAAAABAAAAAAAFABIAAAAAAAAAAAAFABMAAAABAAAAAAAFABQAAAACAAAAAAAGAAAAAAACAAAAAAAGAAEAAAABAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAABAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAACAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAABAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAACAAAAAAAGAAwAAAACAAAAAAAGAA0AAAACAAAAAAAGAA4AAAACAAAAAAAGAA8AAAACAAAAAAAGABAAAAAAAAAAAAAGABEAAAABAAAAAAAGABIAAAAAAAAAAAAGABMAAAABAAAAAAAGABQAAAACAAAAAAAHAAAAAAACAAAAAAAHAAEAAAABAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAABAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAACAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAABAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAACAAAAAAAHAAwAAAACAAAAAAAHAA0AAAACAAAAAAAHAA4AAAACAAAAAAAHAA8AAAACAAAAAAAHABAAAAAAAAAAAAAHABEAAAABAAAAAAAHABIAAAAAAAAAAAAHABMAAAABAAAAAAAHABQAAAACAAAAAAAIAAAAAAACAAAAAAAIAAEAAAABAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAABAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAACAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAABAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAAIABAAAAAAAAAAAAAIABEAAAABAAAAAAAIABIAAAAAAAAAAAAIABMAAAABAAAAAAAIABQAAAACAAAAAAAJAAAAAAACAAAAAAAJAAEAAAABAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAABAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAABAAAAAAAJAAkAAAABAAAAAAAJAAoAAAABAAAAAAAJAAsAAAABAAAAAAAJAAwAAAABAAAAAAAJAA0AAAABAAAAAAAJAA4AAAABAAAAAAAJAA8AAAABAAAAAAAJABAAAAABAAAAAAAJABEAAAABAAAAAAAJABIAAAAAAAAAAAAJABMAAAABAAAAAAAJABQAAAACAAAAAAAKAAAAAAACAAAAAAAKAAEAAAABAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAABAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAACAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAABAAAAAAAKAAoAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAAKABAAAAAAAAAAAAAKABEAAAAAAAAAAAAKABIAAAAAAAAAAAAKABMAAAABAAAAAAAKABQAAAACAAAAAAALAAAAAAACAAAAAAALAAEAAAABAAAAAAALAAIAAAAAAAAAAAALAAMAAAABAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAACAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAABAAAAAAALAAoAAAABAAAAAAALAAsAAAABAAAAAAALAAwAAAABAAAAAAALAA0AAAABAAAAAAALAA4AAAABAAAAAAALAA8AAAAAAAAAAAALABAAAAAAAAAAAAALABEAAAAAAAAAAAALABIAAAAAAAAAAAALABMAAAABAAAAAAALABQAAAACAAAAAAAMAAAAAAACAAAAAAAMAAEAAAABAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAABAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAACAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAABAAAAAAAMAA8AAAAAAAAAAAAMABAAAAAAAAAAAAAMABEAAAAAAAAAAAAMABIAAAAAAAAAAAAMABMAAAABAAAAAAAMABQAAAACAAAAAAANAAAAAAACAAAAAAANAAEAAAABAAAAAAANAAIAAAAAAAAAAAANAAMAAAABAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAACAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAABAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAABAAAAAAANABQAAAACAAAAAAAOAAAAAAACAAAAAAAOAAEAAAABAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAABAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAACAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAABAAAAAAAOAA8AAAABAAAAAAAOABAAAAABAAAAAAAOABEAAAABAAAAAAAOABIAAAABAAAAAAAOABMAAAABAAAAAAAOABQAAAACAAAAAAAPAAAAAAACAAAAAAAPAAEAAAABAAAAAAAPAAIAAAACAAAAAAAPAAMAAAABAAAAAAAPAAQAAAACAAAAAAAPAAUAAAACAAAAAAAPAAYAAAACAAAAAAAPAAcAAAACAAAAAAAPAAgAAAACAAAAAAAPAAkAAAACAAAAAAAPAAoAAAACAAAAAAAPAAsAAAACAAAAAAAPAAwAAAACAAAAAAAPAA0AAAACAAAAAAAPAA4AAAABAAAAAAAPAA8AAAACAAAAAAAPABAAAAACAAAAAAAPABEAAAACAAAAAAAPABIAAAACAAAAAAAPABMAAAABAAAAAAAPABQAAAACAAAAAAA=")
tile_set = SubResource("TileSet_e0an3")
